microservices/blog/infra/k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments
  labels:
    app: comments
spec:
  type: ClusterIP
  ports:
  - port: 4001
    targetPort: 4001
  selector:
    app: comments
