microservices/blog/infra/k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
  labels:
    app: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation
  labels:
    app: moderation
spec:
  type: ClusterIP
  ports:
  - port: 4003
    targetPort: 4003
  selector:
    app: moderation
