microservices/blog/infra/k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: query
---
apiVersion: v1
kind: Service
metadata:
  name: query
  labels:
    app: query
spec:
  type: ClusterIP
  ports:
  - port: 4002
    targetPort: 4002
  selector:
    app: query
