microservices/blog/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /posts/create
        pathType: Prefix
        backend:
          service:
            name: posts
            port:
              number: 4000
      - path: /posts/?(.*)/comments
        pathType: Prefix
        backend:
          service:
            name: comments
            port:
              number: 4001
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: query
            port:
              number: 4002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 3000
      # - path: /query
      #   backend:
      #     serviceName: query
      #     servicePort: 4002
